fix abs to rel links

--- a/xmlhttprequest-sync-abort-events.sub.html
+++ b/xmlhttprequest-sync-abort-events.sub.html
@@ -4,7 +4,7 @@ function w(m) {
   if (window.dump) dump(m + '\n');
 }
 
-window.location = "/blank.html";
+window.location = "blank.html";
 w('started nav');
 
 let x = new XMLHttpRequest();
